// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders correctly 1`] = `
<button
  class="sqi-btn sqi-btn-default sqi-btn-size-md sqi-btn-variant-default"
  type="button"
>
  <span>
    Follow
  </span>
</button>
`;

exports[`Button > should apply anchorProps to anchor element 1`] = `
<a
  class="sqi-btn sqi-btn-link sqi-btn-size-md sqi-btn-variant-default custom-class"
  data-testid="custom-anchor"
  href="https://example.com"
>
  <span>
    Link
  </span>
</a>
`;

exports[`Button > should render anchor element when href is provided 1`] = `
<a
  class="sqi-btn sqi-btn-link sqi-btn-size-md sqi-btn-variant-default"
  href="https://example.com"
  target="_blank"
>
  <span>
    Link
  </span>
</a>
`;

exports[`Button > should render custom loading icon when provided 1`] = `
<button
  class="sqi-btn sqi-btn-default sqi-btn-size-md sqi-btn-variant-default sqi-btn-loading"
  type="button"
>
  <div
    id="loading-icon"
  >
    loading
  </div>
  <span>
    Click me
  </span>
</button>
`;

exports[`Button > should render icon only when not loading 1`] = `
<button
  class="sqi-btn sqi-btn-default sqi-btn-size-md sqi-btn-variant-default"
  type="button"
>
  <div
    id="test-icon"
  >
    loading
  </div>
  <span>
    Click me
  </span>
</button>
`;

exports[`Button > should render icon only when not loading 2`] = `
<button
  class="sqi-btn sqi-btn-default sqi-btn-size-md sqi-btn-variant-default sqi-btn-loading"
  type="button"
>
  <span
    aria-label="loading"
    class="sqi-icon sqi-icon-spin"
    role="img"
  >
    <svg
      aria-hidden="true"
      fill="none"
      focusable="false"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 2.25C6.61556 2.25 2.25 6.61556 2.25 12C2.25 17.3844 6.61556 21.75 12 21.75V19.3125C7.96142 19.3125 4.6875 16.0386 4.6875 12C4.6875 7.96142 7.96142 4.6875 12 4.6875C16.0386 4.6875 19.3125 7.96142 19.3125 12H21.75C21.75 6.61556 17.3844 2.25 12 2.25Z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
  </span>
  <span>
    Click me
  </span>
</button>
`;

exports[`Button > should trigger click event when provided 1`] = `
<button
  class="sqi-btn sqi-btn-default sqi-btn-size-md sqi-btn-variant-default"
  type="button"
>
  <span>
    Follow
  </span>
</button>
`;
